@@ -61,6 +61,7 @@ CHASSIS_API int chassis_log_open(chassis_log *log);
 CHASSIS_API void chassis_log_func(const gchar *log_domain, GLogLevelFlags log_level, const gchar *message, gpointer user_data);
 CHASSIS_API void chassis_log_set_logrotate(chassis_log *log);
 CHASSIS_API int chassis_log_set_event_log(chassis_log *log, const char *app_name);
+CHASSIS_API const char *chassis_log_skip_topsrcdir(const char *message);
 /*@}*/
 
 #endif
